--- a/skene/skenepisteet/static/css/style.css
+++ b/skene/skenepisteet/static/css/style.css
@@ -43,6 +43,7 @@ header h1 {
     -o-transition: all 0.5s ease-in-out;
     -ms-transition: all 0.5s ease-in-out;
     transition: all 0.5s ease-in-out;
+    text-transform: uppercase;
 }
 
 header h1 a {
