--- a/skene/skenepisteet/static/css/style.css
+++ b/skene/skenepisteet/static/css/style.css
@@ -4,7 +4,7 @@ body, html {
 
 body {
     font-family: 'Ubuntu', sans-serif;
-    /* background: url('../images/bg_image.jpg') no-repeat fixed center; */
+    background: url('../images/dark-tile.png');
     font-size: 16px;
 }
 
