--- a/skene/templates/base.html
+++ b/skene/templates/base.html
@@ -31,11 +31,7 @@
     <div class="container">
         <header>
             {% block header %}
-                {% if user.is_authenticated %}
-                    <h1><a href="{% url skenepisteet.views.logout_view %}">;</a>{{ user.username }}</h1>
-                {% else %}
-                    <h1><a class="modal" href="{% url skenepisteet.views.login_popup %}">;</a>SKENEPISTEET</h1>
-                {% endif %}
+                <h1>;SKENEPISTEET</h1>
             {% endblock %}
         </header>
         <div id="content">
