--- a/skene/skenepisteet/static/css/style.css
+++ b/skene/skenepisteet/static/css/style.css
@@ -26,7 +26,7 @@ textarea {
 }
 
 .container {
-    height: 100%;
+    min-height: 100%;
     background-color: white;
     box-shadow: 0 0 15px black;
 }
